# aoc-2024

./: .gitignore  bonus.txt  pyproject.toml
aoc2024/day1/: p1.py  p2.py
aoc2024/day10/: p1.py  p2.py
aoc2024/day11/: p1.py  p2.py
aoc2024/day12/: p1.py  p2.py  p2b.py
aoc2024/day13/: p1.py  p2.py
aoc2024/day14/: p1.py  p2.py
aoc2024/day15/: p1.py  p2.py
aoc2024/day16/: p1.py  p2.py
aoc2024/day17/: p1.py  p2.py  p2a.py  res.txt
aoc2024/day18/: p1.py  p2.py
aoc2024/day19/: p1.py  p2.py
aoc2024/day2/: p1.py  p2.py
aoc2024/day20/: p1.py  p2.py
aoc2024/day21/: graphs.py  p1.py
aoc2024/day22/: p1.py  p2.py
aoc2024/day23/: p1.py  p2.py
aoc2024/day24/: p1.py  p2.ipynb  p2.py
aoc2024/day25/: p1.py
aoc2024/day3/: p1.py
aoc2024/day4/: p1.py  p2.py
aoc2024/day5/: p1.py  p1b.py  p2.py
aoc2024/day6/: p1.py  p2.py
aoc2024/day7/: p1.py  p2.py
aoc2024/day8/: p1.py  p2.py
aoc2024/day9/: p1.py  p2.py
day1/: p1.py  p2.py
day10/: p1.py  p2.py
day11/: p1.py  p2.py
day12/: p1.py  p2.py  p2b.py
day13/: p1.py  p2.py
day14/: p1.py  p2.py
day15/: p1.py  p2.py
day16/: p1.py  p2.py
day17/: p1.py  p2.py  p2a.py  p2b.py  period.txt
day18/: p1.py  p2.py
day19/: p1.py  p2.py
day2/: p1.py  p2.py
day3/: p2.py
day4/: p1.py  p2.py
day5/: p1.py  p1b.py  p2.py
day6/: p1.py  p2.py
day7/: p1.py  p2.py
day8/: p1.py  p2.py
day9/: p1.py  p2.py
