[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Luca Mattiazzi <luca.mattiazzi@illimity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
